--- a/src/components/Pages/Architects.module.css
+++ b/src/components/Pages/Architects.module.css
@@ -608,7 +608,7 @@
     padding: 0 16px;
   }
   .architectsPage {
-    background-size: 14px 14px;
+    background-size: 30px 30px;
   }
   
   .heroSection {
