--- a/src/components/Pages/Services.module.css
+++ b/src/components/Pages/Services.module.css
@@ -1040,7 +1040,7 @@
     padding: 0 12px 40px 12px;
   }
   .servicesPage {
-    background-size: 24px 24px; /* הכי צפוף במסכים קטנים */
+    background-size: 30px 30px; /* הכי צפוף במסכים קטנים */
   }
   
   .heroSection {
